--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="/Backend/gallerie.js" defer> </script>
+	<script src="../Backend/gallerie.js" defer> </script>
 </head>
 <body>
 <header>
@@ -37,7 +37,8 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="gallery"> <!--
+		<div class="gallery"> 
+			<!--
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
@@ -81,7 +82,8 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure> -->
+			</figure> 
+		-->
 		</div>
 	</section>
 	<section id="contact">
