--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,13 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filtre">
+			<button class="btn-tous">Tous</button>
+			<button class="btn-objet">Objets</button>
+			<button class="btn-appartement">Appartements</button>
+			<button class="btn-hotel">Hôtels & restaurants</button>
+
+		</div>
 		<div class="gallery"> 
 			<!--
 			<figure>
