Ajout de l'authentification obligatoire pour la suppression et de la modale pour ajouter des projets

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -65,10 +65,9 @@
 					<label for="categorie">
 						<select type="list" name="categorie">
 							<option value="">  Sélectionner une catégorie</option>
-							<option value="Appartements">Appartements</option>
-							<option value ="Bar & Restaurant">Bar & Restaurant</option>
-							<option value="Hotels & restaurants">Hotels & restaurants</option>
-							<option value="Objets">Objets</option>
+							<option id = "2" value="Appartements">Appartements</option>
+							<option id = "3" value="Hotels & restaurants">Hotels & restaurants</option>
+							<option id = "1" value="Objets">Objets</option>
 						</select>
 					</label>
 					<img class="chevron-down" src="./assets/icons/chevron-down-solid 1.png">					
