Correction bugs et actualisation du DOM après POST

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -31,6 +31,7 @@
 			<div class="conteneur-btn-photo">
 				<button type="button" id="btn-ajout-photo">Ajouter une photo</button>
 			</div>
+			<p class="msg-form"></p>
 		</div>
 	</div>
 	<div class = "modale-background deux">
@@ -63,7 +64,7 @@
 				<fieldset>
 					<legend>Catégorie</legend>
 					<label for="categorie">
-						<select type="list" name="categorie" required>
+						<select type="list" name="categorie" id="select-categorie" required>
 							<option value="">  Sélectionner une catégorie</option>
 							<option id = "2" value="Appartements">Appartements</option>
 							<option id = "3" value="Hotels & restaurants">Hotels & restaurants</option>
