Correction de fautes (orth) et couleur message ajout projet

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href ="./assets/modale.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="stylesheet" href="./assets/login.css">
-	<script src="gallerie.js" defer> </script>
+	<script src="galerie.js" defer> </script>
 	<script src="connexion.js" defer></script>
 	<script src="modale.js" defer></script>
 	<script src="modaleAjout.js" defer></script>
@@ -25,7 +25,7 @@
 			</button>		
 			
 			<h3>Galerie Photo</h3>
-			<div class="modale-gallerie">
+			<div class="modale-galerie">
 			</div>
 			<hr>
 			<div class="conteneur-btn-photo">
